--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CheckYourAnswersView.scala.html
@@ -34,7 +34,7 @@
 @(navigationBarContent: NavigationBarContent, summaryList: SummaryList)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @heading = @{messages("checkYourAnswers.title")}
-@layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.CheckYourAnswersController.submit, Symbol("autoComplete") -> "off") {
 <h1 class="govuk-heading-l">@messages("checkYourAnswers.title")</h1>
 @govukSummaryList(summaryList)
