--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
@@ -30,7 +30,7 @@ govukSummaryList : GovukSummaryList,
 
 @heading = @{messages("addPropertyRequestSent.title")}
 
-@layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 
 @panel(Panel(
 title = Text(heading),
