--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/TwoThirdsLayout.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/TwoThirdsLayout.scala.html
@@ -19,8 +19,10 @@
 @(contentBlock: Html, navbar: Html)
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    @navbar
-    @contentBlock
-  </div>
+    <div class="govuk-grid-column-full">
+        @navbar
+    </div>
+    <div class="govuk-grid-column-two-thirds">
+        @contentBlock
+    </div>
 </div>
