--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
@@ -51,13 +51,11 @@
 }
 
 @heading = @{messages("currentRatepayer.title")}
-@layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.CurrentRatepayerController.submit(mode), Symbol("autoComplete") -> "off") {
     @if(form.errors.nonEmpty) {
     @govukErrorSummary(ErrorSummaryViewModel(form))
     }
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-m">@address</span>
         <h1 class="govuk-heading-l">@messages("currentRatepayer.title")</h1>
         <P class="govuk-body"> @messages("currentRatepayer.p1")</P>
@@ -72,7 +70,5 @@
             </div>
         </div>
         @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
-    </div>
-</div>
   }
 }
