--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
@@ -56,17 +56,19 @@
     @if(form.errors.nonEmpty) {
     @govukErrorSummary(ErrorSummaryViewModel(form))
     }
-    <div class="govuk-grid-row">
         <span class="govuk-caption-m">@address</span>
         <h1 class="govuk-heading-l">@messages("currentRatepayer.title")</h1>
-        <P class = "govuk-body"> @messages("currentRatepayer.p1")</P>
-      @govukDetails(Details(
+        <P class="govuk-body"> @messages("currentRatepayer.p1")</P>
+        @govukDetails(Details(
         id = Some("how-to-tell-if-you-are-the-current-rate-payer"),
         summary = Text(messages("currentRatepayer.details.summary")),
         content = HtmlContent(dropDownContent)
-      ))
-      @govukRadios(ngrRadio)
-      @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
-    </div>
+        ))
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+                @govukRadios(ngrRadio)
+            </div>
+        </div>
+        @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
   }
 }
