Added extra check for incorrect file MIME type upload

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
@@ -59,7 +59,7 @@
     isPageHeading = false,
     attributes = Map(
     //TODO clarify whether this is correct
-    "accept" -> ".pdf,.doc,.docx,.png,.jpg,.jpeg",
+    "accept" -> ".pdf,.png",
     "data-max-file-size" -> "100000000",
     "data-min-file-size" -> "1000"
     )
