--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/BusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/BusinessRatesBillView.scala.html
@@ -35,17 +35,15 @@
 
       
       @heading = @{messages("businessRatesBill.title")}
-      @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+      @layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
       @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.BusinessRatesBillController.submit(mode), Symbol("autoComplete") -> "off") {
       @if(form.errors.nonEmpty) {
       @govukErrorSummary(ErrorSummaryViewModel(form))
       }
-      <div class="govuk-grid-row">
       <span class="govuk-caption-m">@address</span>
       <h1 class="govuk-heading-l">@messages("businessRatesBill.title")</h1>
 
       @govukRadios(ngrRadio)
       @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
-      </div>
   }
 }
