--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
@@ -22,20 +22,19 @@
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components.LinkComponent
 
 @this(layout: Layout,
-<<<<<<< Updated upstream
         fileUpload: components.FileUpload,
         saveAndContinueButton: saveAndContinueButton
-=======
-fileUpload: components.FileUpload,
-saveAndContinueButton: saveAndContinueButton,
-button: components.button
->>>>>>> Stashed changes
 )
 
 @(form: Form[String], upscanResponse: UpscanInitiateResponse, errorMessage: Option[String], address: String, navigationBarContent: NavigationBarContent, searchAgainUrl: String, dashboardUrl: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
-
+@fileUploadFormClass = {
+    @if(form.hasErrors){
+        "govuk-form-group govuk-form-group--error"
+    }else{
+        "govuk-form-group"
+    }
+}
 @heading = @{messages("uploadBusinessRatesBill.title")}
-
 @layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 <h2 class="govuk-caption-l hmrc-caption-l"><span class="govuk-visually-hidden"></span>@address</h2>
 <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
@@ -45,8 +44,7 @@ button: components.button
 
 <form action="@upscanResponse.uploadRequest.href" method="POST" enctype="multipart/form-data" id="file-upload-form">
 
-    <div id="file-upload-form-group" class="govuk-form-group @{
-                    if(form.hasErrors) " govuk-form-group--error" }">
+    <div id="file-upload-form-group" class=@fileUploadFormClass>
 
     @upscanResponse.uploadRequest.fields.map { row =>
     <input type="hidden" name="@row._1" value="@row._2">
