[NGR-1836] Swtiching text to be not bold

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
@@ -47,7 +47,7 @@ saveAndContinueButton: saveAndContinueButton
         name  =  "postcode-value",
         label =   messages("findAProperty.postcode.label"),
         isVisible = true,
-        classes = Some("govuk-!-width-one-third govuk-!-font-weight-bold")
+        classes = Some("govuk-!-width-one-third")
         )
         @linkComponent(label = messages("findAProperty.manual"), hrefUrl = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.ManualPropertySearchController.show.url)
 
