--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -31,7 +31,8 @@
     govukPagination : GovukPagination,
     govukTable : GovukTable,
     govukDetails : GovukDetails,
-    govukSelect: GovukSelect
+    govukSelect: GovukSelect,
+    saveAndContinueButton: saveAndContinueButton
 )
 
 @(form: Form[SingleSearchResultForm],
@@ -66,6 +67,16 @@
     </p>
 }
 
+@sortBySelect = {
+    @govukSelect(
+        Select(
+            id = "sortBy",
+            name = "sortBy",
+            label = Label(content = Text(messages("singleSearchResultPage.sortBy.label"))),
+            items = sortingSelectItems
+        ).withFormField(form("sortBy"))
+    )
+}
 @heading = @{messages("singleSearchResultPage.title", postcode)}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.SingleSearchResultController.sort, Symbol("autoComplete") -> "off") {
@@ -76,14 +87,8 @@
             Showing <strong>@pageBottom</strong> to <strong>@pageTop</strong> of <strong>@totalProperties</strong> items.
             <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a>
         </p>
-        @govukSelect(
-            Select(
-                id = "sort",
-                name = "sort",
-                label = Label(content = Text(messages("singleSearchResultPage.sortBy.label"))),
-                items = sortingSelectItems
-            ).withFormField(form("sort"))
-        )
+        @sortBySelect
+        @saveAndContinueButton(msg = messages("singleSearchResultPage.button"), isStartButton = false)
         @govukTable(propertySearchResultTable)
         @govukPagination(paginationData.toPagination)
     </div>
