--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -15,10 +15,13 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
+@import uk.gov.hmrc.govukfrontend.views.html.components.implicits._
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.select.SelectItem
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components.NavigationBarContent
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components.LinkComponent
+@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.forms.SingleSearchResultForm
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.paginate._
 
 @this(
@@ -28,9 +31,12 @@
     govukPagination : GovukPagination,
     govukTable : GovukTable,
     govukDetails : GovukDetails,
+    govukSelect: GovukSelect,
+    saveAndContinueButton: saveAndContinueButton
 )
 
-@(navigationBarContent: NavigationBarContent,
+@(form: Form[SingleSearchResultForm],
+  navigationBarContent: NavigationBarContent,
   searchAgainUrl: String,
   postcode: String,
   totalProperties: Int,
@@ -38,6 +44,7 @@
   pageBottom: Int,
   paginationData: PaginationData,
   propertySearchResultTable: Table,
+  sortingSelectItems: Seq[SelectItem]
 )(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @dropDownContent = {
@@ -60,8 +67,19 @@
     </p>
 }
 
+@sortBySelect = {
+    @govukSelect(
+        Select(
+            id = "sortBy",
+            name = "sortBy",
+            label = Label(content = Text(messages("singleSearchResultPage.sortBy.label"))),
+            items = sortingSelectItems
+        ).withFormField(form("sortBy"))
+    )
+}
 @heading = @{messages("singleSearchResultPage.title", postcode)}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.SingleSearchResultController.sort, Symbol("autoComplete") -> "off") {
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">@messages("singleSearchResultPage.title", postcode)</h1>
@@ -69,6 +87,8 @@
             Showing <strong>@pageBottom</strong> to <strong>@pageTop</strong> of <strong>@totalProperties</strong> items.
             <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a>
         </p>
+        @sortBySelect
+        @saveAndContinueButton(msg = messages("singleSearchResultPage.button"), isStartButton = false)
         @govukTable(propertySearchResultTable)
         @govukPagination(paginationData.toPagination)
     </div>
@@ -82,4 +102,5 @@
         ))
     </div>
 </div>
+}
 }
