--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
@@ -36,12 +36,11 @@
 }
 @heading = @{messages("uploadBusinessRatesBill.title")}
 @layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
-    <div class="govuk-grid-row">
-            <h2 class="govuk-caption-l hmrc-caption-l"><span class="govuk-visually-hidden"></span>@address</h2>
-            <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
-            <p class="govuk-caption-m hmrc-caption-m">
-            @messages("uploadBusinessRatesBill.p1")
-            </p>
+<span class="govuk-caption-m">@address</span>
+<h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
+<p class="govuk-caption-m hmrc-caption-m">
+    @messages("uploadBusinessRatesBill.p1")
+</p>
 
 <form action="@upscanResponse.uploadRequest.href" method="POST" enctype="multipart/form-data" id="file-upload-form">
 
@@ -63,5 +62,4 @@
                 </div>
                 @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
             </form>
-    </div>
 }
