--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/FileUpload.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/FileUpload.scala.html
@@ -15,41 +15,37 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.govukfrontend.views.Aliases.FileUpload
-@import uk.gov.hmrc.govukfrontend.views.viewmodels._
 
 @this(govukFileUpload : GovukFileUpload)
 
 @(
-        form: Form[_],
-        errorMessage: Option[String],
-        id: String,
-        name: String,
-        label: String,
-        isPageHeading: Boolean,
-        headingMessageArgs: Seq[String] = Seq(),
-        hint: Option[Html] = None,
-        classes: Option[String] = None,
-        labelHidden: Boolean = true,
-        attributes: Map[String, String] = Map.empty
+form: Form[_],
+errorMessage: Option[String],
+id: String,
+name: String,
+label: String,
+isPageHeading: Boolean,
+headingMessageArgs: Seq[String] = Seq(),
+hint: Option[Html] = None,
+classes: Option[String] = None,
+labelHidden: Boolean = true,
+attributes: Map[String, String] = Map.empty
 )(implicit messages: Messages)
 
-@govukFileUpload(uk.gov.hmrc.govukfrontend.views.Aliases.FileUpload(
-    id,
-    name,
-    classes = classes.fold("")(x => x),
-    label = Label(
-        content = Text(messages(label, headingMessageArgs:_*)),
-        isPageHeading = isPageHeading,
-        classes = if(isPageHeading) "govuk-label--l" else if (labelHidden) "govuk-visually-hidden" else ""
-    ),
-    hint = hint.map(hintHtml => Hint(
-        content = HtmlContent(hintHtml)
-    )),
-    value = form(name).value,
-    /*errorMessage = form(name).error.map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*)))),*/
-    errorMessage = errorMessage.map(error => ErrorMessage(content = Text(error))),
-    attributes = attributes,
-    //TODO maybe fix this
-
+@govukFileUpload(uk.gov.hmrc.govukfrontend.views.html.components.FileUpload(
+id,
+name,
+classes = classes.fold("")(x => x),
+label = Label(
+content = Text(messages(label, headingMessageArgs:_*)),
+isPageHeading = isPageHeading,
+classes = if(isPageHeading) "govuk-label--l" else if (labelHidden) "govuk-visually-hidden" else ""
+),
+hint = hint.map(hintHtml => Hint(
+content = HtmlContent(hintHtml)
+)),
+value = form(name).value,
+errorMessage = errorMessage.map(error => ErrorMessage(content = Text(error))),
+attributes = attributes,
+javascript = Some(true)
 ))
