--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.upscanV2.{UploadId, UploadStatus}
+@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.upscan.{UploadId, UploadStatus}
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components._
 @import play.api.mvc.RequestHeader
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
@@ -23,28 +23,28 @@
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
 
 
-@this(layout: Layout, govukSummaryList : GovukSummaryList, saveAndContinueButton: saveAndContinueButton, formHelper: FormWithCSRF)
+@this(layout: Layout, govukSummaryList: GovukSummaryList, saveAndContinueButton: saveAndContinueButton, formHelper: FormWithCSRF)
 
 @(navigationBarContent: NavigationBarContent, summaryList: SummaryList, addressFull: String, uploadId: UploadId, status: UploadStatus)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @refreshHeader = {
-<meta http-equiv="refresh" content="1"/>
+    <meta http-equiv="refresh" content="1"/>
 }
 
 @heading = @{messages("uploadBusinessRatesBill.title")}
 @layout(
-pageTitle    = Some(heading),
-fullWidth = true,
-showBackLink = true,
-navigationBarContent =  Some(navigationBarContent),
-templateOverrides = TemplateOverrides(
-additionalHeadBlock = status match {
-case UploadStatus.InProgress => Some(refreshHeader)
-case _                       => None
-}
-)
+    pageTitle    = Some(heading),
+    fullWidth = true,
+    showBackLink = true,
+    navigationBarContent = Some(navigationBarContent),
+    templateOverrides = TemplateOverrides(
+                            additionalHeadBlock = status match {
+                                                    case UploadStatus.InProgress => Some(refreshHeader)
+                                                    case _                       => None
+                                                }
+                                            )
 ) {
-<span class="govuk-caption-m">@addressFull</span>
+<h2 class="govuk-caption-l hmrc-caption-l"><span class="govuk-visually-hidden"></span>@addressFull</h2>
 <h1 class="govuk-heading-l">@heading</h1>
 
 @govukSummaryList(summaryList)
@@ -61,6 +61,6 @@ case _ => {
 <p class="govuk-body">
     <button class="govuk-button govuk-button--secondary" disabled="disabled">Next</button>
 </p>
-}
-}
+        }
+    }
 }
