--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2023 HM Revenue & Customs
+ * Copyright 2025 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -31,12 +31,6 @@
     <meta http-equiv="refresh" content="1"/>
 }
 
-@uploadStatus = {
-
-}
-
-
-
 @heading = @{messages("uploadBusinessRatesBill.title")}
 @layout(
     pageTitle    = Some(heading),
@@ -48,7 +42,7 @@
                 case _                       => None
             }
 ) {
-<h2 class="govuk-caption-l hmrc-caption-l"><span class="govuk-visually-hidden"></span>@addressFull</h2>
+<span class="govuk-caption-m">@addressFull</span>
 <h1 class="govuk-heading-l">@heading</h1>
 
 @govukSummaryList(summaryList)
